# r-vcs

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS.md  INSTALLATION.md  LICENSE  QUICK_START.md  README.md
.github/: GITHUB_README.md  PRE_GIT_CHECKLIST.md  PUBLISHING.md  README.md  README_GITHUB_SETUP.md
.github/workflows/: ci.yml
src/: commands.rs  config.rs  ignore.rs  lock.rs  main.rs  objects.rs  repository.rs  utils.rs
